CDCRM-903 : API Fonction_Contact - Ajout de la table et du WS
